Remove some references to deprecated API.