@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.ant.ws;
@@ -47,13 +47,13 @@ public class DefaultWSImporter implements WSImporter
   private final Object[] parameters;
   private List<String> fullLog;
   private List<String> summaryLog;
-  
+
   public DefaultWSImporter(String methodName, Object...parameters)
   {
     this.methodName = methodName;
     this.parameters = parameters;
   }
-  
+
   public Object execute(Connection conn, Object port) throws Exception
   {
     Class portClass = port.getClass();
@@ -70,7 +70,7 @@ public class DefaultWSImporter implements WSImporter
             if (parameter instanceof Map)
             {
               Class paramClass = method.getParameterTypes()[i];
-              Object paramInstance = paramClass.newInstance();
+              Object paramInstance = paramClass.getConstructor().newInstance();
               Set keys = ((Map)parameter).keySet();
               for (Object key : keys)
               {
@@ -95,5 +95,5 @@ public class DefaultWSImporter implements WSImporter
   {
     return summaryLog;
   }
-  
+
 }
