@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.util.sequence;
@@ -51,7 +51,7 @@ public class SQLSequenceStore implements SequenceStore
   private String driver;
   private String user;
   private String password;
-  
+
   public SQLSequenceStore(String dataSource)
   {
     this.dataSource = dataSource;
@@ -64,13 +64,13 @@ public class SQLSequenceStore implements SequenceStore
     this.user = user;
     this.password = password;
   }
-  
-  public Sequence loadSequence(String name) 
+
+  public Sequence loadSequence(String name)
     throws Exception
   {
     return loadSequence(name, true);
   }
-  
+
   public Sequence loadSequence(String name, boolean autoincrement)
     throws Exception
   {
@@ -78,7 +78,7 @@ public class SQLSequenceStore implements SequenceStore
     Connection conn = getConnection();
     try
     {
-      conn.setAutoCommit(false);  
+      conn.setAutoCommit(false);
       int value = autoincrement ? 0 : 1;
       if (autoincrement)
         value = increment(conn, name);
@@ -98,17 +98,17 @@ public class SQLSequenceStore implements SequenceStore
     {
       conn.close();
     }
-    return sequence;    
+    return sequence;
   }
-  
-  public Sequence changeSequence(String name, String value) 
+
+  public Sequence changeSequence(String name, String value)
     throws Exception
   {
     Sequence sequence = new Sequence(name, value);
     Connection conn = getConnection();
     try
     {
-      conn.setAutoCommit(false);        
+      conn.setAutoCommit(false);
       if (sequence != null)
         change(conn, sequence);
       conn.commit();
@@ -120,17 +120,17 @@ public class SQLSequenceStore implements SequenceStore
     finally
     {
       conn.close();
-    }   
+    }
     return sequence;
   }
-  
+
   public Sequence createSequence(String name, String initValue) throws Exception
   {
     Sequence sequence = new Sequence(name, initValue);
     Connection conn = getConnection();
     try
     {
-      conn.setAutoCommit(false);        
+      conn.setAutoCommit(false);
       if (sequence != null)
         create(conn, sequence);
       conn.commit();
@@ -142,19 +142,19 @@ public class SQLSequenceStore implements SequenceStore
     finally
     {
       conn.close();
-    }   
+    }
     return sequence;
-  } 
-  
+  }
+
   private Connection getConnection() throws Exception
   {
     if (dataSource != null)
       return getConnection(dataSource);
     else
-      return getConnection(driver, url, user, password);    
+      return getConnection(driver, url, user, password);
   }
-  
-  private Connection getConnection(String dataSource) throws Exception 
+
+  private Connection getConnection(String dataSource) throws Exception
   {
     javax.naming.Context initContext = new InitialContext();
     javax.naming.Context envContext  =
@@ -162,17 +162,17 @@ public class SQLSequenceStore implements SequenceStore
     DataSource ds = (DataSource)envContext.lookup(dataSource);
     return ds.getConnection();
   }
-  
-  private Connection getConnection(String driver, String url, String user, 
+
+  private Connection getConnection(String driver, String url, String user,
           String password) throws Exception
   {
     Connection result = null;
-    Class.forName(driver).newInstance();
+    Class.forName(driver).getConstructor().newInstance();
     result = DriverManager.getConnection(url, user, password);
-    return result;    
+    return result;
   }
-  
-  private long read(Connection conn, String counterName) throws SQLException 
+
+  private long read(Connection conn, String counterName) throws SQLException
   {
     if (counterName != null)
     {
@@ -182,7 +182,7 @@ public class SQLSequenceStore implements SequenceStore
       {
         stmt.setString(1, counterName);
         ResultSet rs = stmt.executeQuery();
-        if (rs != null) 
+        if (rs != null)
         {
           rs.next();
           return rs.getLong("value");
@@ -195,7 +195,7 @@ public class SQLSequenceStore implements SequenceStore
     }
     return 0;
   }
-    
+
 
   private int increment(Connection conn, String counterName) throws SQLException
   {
@@ -215,8 +215,8 @@ public class SQLSequenceStore implements SequenceStore
       }
     }
     return 0;
-  }  
-  
+  }
+
   private int change(Connection conn, Sequence sequence) throws SQLException
   {
     if (sequence != null)
@@ -236,7 +236,7 @@ public class SQLSequenceStore implements SequenceStore
       }
     }
     return 0;
-  }   
+  }
 
   private int create(Connection conn, Sequence sequence) throws SQLException
   {
@@ -257,7 +257,7 @@ public class SQLSequenceStore implements SequenceStore
       }
     }
     return 0;
-  }   
-  
+  }
+
 
 }
