@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.ws;
@@ -45,7 +45,7 @@ import java.lang.reflect.Method;
  * @author realor
  * @param <T> the service instance class
  */
-public class SingleInstanceResolver<T extends Object> 
+public class SingleInstanceResolver<T extends Object>
   extends InstanceResolver<T>
 {
   protected WSController controller;
@@ -56,7 +56,7 @@ public class SingleInstanceResolver<T extends Object>
     // An instance of this resolver is created for each endpoint
     try
     {
-      instance = clazz.newInstance();
+      instance = clazz.getConstructor().newInstance();
     }
     catch (Exception ex)
     {
@@ -78,7 +78,7 @@ public class SingleInstanceResolver<T extends Object>
       @Override
       public void start(WSWebServiceContext wsc, WSEndpoint endpoint)
       {
-        controller = WSController.getInstance(endpoint);        
+        controller = WSController.getInstance(endpoint);
         controller.setInstanceResolver(SingleInstanceResolver.this);
         getResourceInjector(endpoint).inject(wsc, instance);
         SingleInstanceResolver.this.start(wsc, endpoint);
@@ -89,9 +89,9 @@ public class SingleInstanceResolver<T extends Object>
       {
         SingleInstanceResolver.this.dispose();
       }
-      
+
       @Override
-      public Object invoke(Packet packet, Method method, Object... args) 
+      public Object invoke(Packet packet, Method method, Object... args)
         throws InvocationTargetException, IllegalAccessException
       {
         return method.invoke(instance, args);
@@ -99,7 +99,7 @@ public class SingleInstanceResolver<T extends Object>
     };
   }
 
-  protected static ResourceInjector getResourceInjector(WSEndpoint endpoint) 
+  protected static ResourceInjector getResourceInjector(WSEndpoint endpoint)
   {
     ResourceInjector ri = endpoint.getContainer().getSPI(ResourceInjector.class);
     if (ri == null) ri = ResourceInjector.STANDALONE;
